feat: adicionar pagamentos e calculo financeiro das sessoes
